Mobile alignment fixes

--- a/client/src/components/templates/Post/index.scss
+++ b/client/src/components/templates/Post/index.scss
@@ -140,7 +140,6 @@
           line-height: 42px;
           border-radius: 40px;
           padding-left: 12px;
-          padding-top: 3px;
           display: inline-block;
           text-transform: uppercase;
           margin-right: 8px;
@@ -310,7 +309,6 @@
           text-align: center;
           line-height: 44px;
           border-radius: 40px;
-          padding-top: 2px;
           display: inline-block;
           margin-left: 8px;
           margin-top: 8px;
@@ -608,7 +606,6 @@
 
         .soc-wrap {
           float: none;
-          display: table-header-group;
 
           a {
             width: 35px;
